# rust-dpdk

./: .gitignore  Cargo.toml  README.md  build.rs  rte.h
examples/dpdk-hello/: Cargo.toml  README.md
examples/dpdk-hello/src/: main.rs
examples/dpdk-l2fwd/: Cargo.toml  README.md  run.sh
examples/dpdk-l2fwd/src/: main.rs
examples/rdtsc/: Cargo.toml  README.md  run.sh
examples/rdtsc/src/: main.rs
src/: atomic.rs  cycles.rs  dpdk.rs  eal.rs  eth.rs  ffi.rs  flow.rs  inline.rs  lcore.rs  lib.rs  mbuf.rs  mempool.rs  net.rs  pktmbuf.rs  ring.rs  socket.rs  version.rs
