[package]
name = "rust-dpdk"
version = "0.0.2"
authors = ["Robert Clipsham <robert@octarineparrot.com>",
	   "Masaru OKI <oki@pontonetworks.com>"]
homepage = "http://dpdk.org/"
repository = "https://github.com/iMasaruOki/rust-dpdk"
license = "BSD-3-Clause"
description = "Bindings to DPDK: Data Plane Development Kit"
readme = "README.md"
keywords = ["networking", "packet", "bindings"]
build = "build.rs"
exclude = ["examples/**/*", "src/inline.rs"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.30.0"
