[package]
name = "rust-dpdk"
version = "0.3.2"
authors = ["Robert Clipsham <robert@octarineparrot.com>",
	   "Masaru OKI <oki@pontonetworks.com>"]
homepage = "http://dpdk.org/"
repository = "https://github.com/iMasaruOki/rust-dpdk"
license = "BSD-3-Clause"
description = "Bindings to DPDK: Data Plane Development Kit"
readme = "README.md"
keywords = ["networking", "packet", "bindings"]
build = "build.rs"

[lib]
name = "dpdk"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.39"
